managed to fix center elements on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,7 +96,7 @@ span {
         
     }
     .top-box {
-       
+        margin-left: unset;
         width: 300px;
         height: 300px;
         
@@ -106,13 +106,13 @@ span {
         flex-direction: column;
     }
     .left-box {
-        
+        margin-left: unset;
         border-radius: 0px; 
 
     }
 
     .right-box {
-    display: block;
+    display: block; 
      position: relative;
     text-align: center;
     border-radius: 0px 0px 13px 13px; 
